--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,49 +2,51 @@
     "name": "JOL Recipes",
     "short_name": "JOL Recipes",
     "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "background_color": "#fdfdfd",
     "theme_color": "#db4938",
-    "orientation": "landscape-primary",
+    "orientation": "any",
     "icons": [{
-            "src": "/images/icons/icon-72x72.png",
+            "src": "images/icons/72.png",
             "type": "image/png",
             "sizes": "72x72"
         },
         {
-            "src": "/images/icons/icon-96x96.png",
+            "src": "images/icons/100.png",
             "type": "image/png",
-            "sizes": "96x96"
+            "sizes": "100x100"
         },
         {
-            "src": "/images/icons/icon-128x128.png",
+            "src": "images/icons/128.png",
             "type": "image/png",
             "sizes": "128x128"
         },
         {
-            "src": "/images/icons/icon-144x144.png",
+            "src": "images/icons/144.png",
             "type": "image/png",
             "sizes": "144x144"
         },
         {
-            "src": "/images/icons/icon-152x152.png",
+            "src": "images/icons/152.png",
             "type": "image/png",
             "sizes": "152x152"
         },
         {
-            "src": "/images/icons/icon-192x192.png",
+            "src": "images/icons/196.png",
             "type": "image/png",
-            "sizes": "192x192"
+            "sizes": "196x196"
         },
         {
-            "src": "/images/icons/icon-384x384.png",
+            "src": "images/icons/256.png",
             "type": "image/png",
-            "sizes": "384x384"
+            "sizes": "256x256"
         },
         {
-            "src": "/images/icons/icon-512x512.png",
+            "src": "images/icons/512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
-    ]
+    ],
+    "splash_pages": null
 }
